feat: 이벤트 수정 기능(#98)
